# django-tsunami-notify

./: .gitignore  README.md  setup.cfg
tsunami_notify/: __init__.py  admin.py  apps.py  models.py
tsunami_notify/management/commands/: sendnotifications.py
tsunami_notify/migrations/: 0001_initial.py  0002_alter_notification_id.py
