[metadata]
name = django-tsunami-notify
description = Notifications for Tsunami events.
long_description = file: README.md
author = Matt Pryor
author_email = matt.pryor@stfc.ac.uk
url = https://github.com/mkjpryor-stfc/django-tsunami-notify


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    django
    django-admin-list-filter-dropdown
    django-admin-rangefilter
    django-tsunami
    jsonfield
